SERVER-57558 Include time-series collections in listCollections with authorizedCollections

(cherry picked from commit 870f8af7b3052d0e866f3b24c7220fef1f9d66f5)